--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-streamlit 
-chromadb
-langchain-community 
-tavily-python 
-openai 
+streamlit
+langchain-community
+tavily-python
+openai
 python-dotenv
 pypdf
+python-docx
+requests
+pysqlite3
+rich
+chromadb
+tiktoken
+altair
