--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
 streamlit
-sqlite3 == 3.35.0
-langchain-community
-tavily-python
-openai
 python-dotenv
-pypdf
+langchain-community
+openai
+tavily-python
+faiss-cpu
+PyPDF2
 python-docx
 requests
-rich
-chromadb
-tiktoken
-altair
